RESOLVED FIXED173399
[WinCairo] DumpRenderTree.cpp: error C3861: 'CFURLCacheCreate': identifier not found
https://bugs.webkit.org/show_bug.cgi?id=173399
Summary [WinCairo] DumpRenderTree.cpp: error C3861: 'CFURLCacheCreate': identifier no...
Fujii Hironori
Reported 2017-06-14 19:47:53 PDT
[WinCairo] DumpRenderTree.cpp: error C3861: 'CFURLCacheCreate': identifier not found https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/3322 > [31/76] Building CXX object Tools\DumpRenderTree\CMakeFiles\DumpRenderTreeLib.dir\win\DumpRenderTree.cpp.obj > FAILED: Tools/DumpRenderTree/CMakeFiles/DumpRenderTreeLib.dir/win/DumpRenderTree.cpp.obj > "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Tools\MSVC\14.10.25017\bin\HostX64\x64\cl.exe" /nologo /TP -DBUILDING_WITH_CMAKE=1 -DDumpRenderTreeLib_EXPORTS -DHAVE_CONFIG_H=1 -DNOMINMAX -DUNICODE -DUSE_CONSOLE_ENTRY_POINT -DWINVER=0x601 -DWIN_CAIRO -DWTF_PLATFORM_WIN_CAIRO=1 -D_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES=1 -D_CRT_SECURE_NO_WARNINGS -D_HAS_EXCEPTIONS=0 -D_UNICODE -D_WIN32_WINNT=0x601 -D_WINDOWS -IDerivedSources\ForwardingHeaders -IDerivedSources -I..\..\WebKitLibraries\win\include -IDerivedSources\DumpRenderTree -I..\..\Tools\TestRunnerShared\UIScriptContext -I..\..\Tools\TestRunnerShared\Bindings -I..\..\Tools\DumpRenderTree -I..\..\Source -I..\..\Source\WebCore\testing\js -I..\..\Tools\DumpRenderTree\win -I..\..\Tools\DumpRenderTree\TestNetscapePlugIn -I..\..\Tools\DumpRenderTree\TestNetscapePlugIn\ForwardingHeaders -I..\..\Tools\DumpRenderTree\TestNetscapePlugIn\Tests -I..\..\Tools\DumpRenderTree\TestNetscapePlugIn\win -I..\..\Tools\DumpRenderTree\TestNetscapePlugIn\Tests\win -I..\..\Source\WebKit\win -IDerivedSources\WebKit\Interfaces -I..\..\Tools\DumpRenderTree\cairo -I..\..\WebKitLibraries\win\include\cairo -I..\..\Source\WebCore\platform\mock -I..\..\Source\WebCore\testing -IDerivedSources\WebCore -I. -I..\..\Source\WebCore -I..\..\Source\WebCore\Modules\airplay -I..\..\Source\WebCore\Modules\applepay -I..\..\Source\WebCore\Modules\credentials -I..\..\Source\WebCore\Modules\encryptedmedia -I..\..\Source\WebCore\Modules\encryptedmedia\legacy -I..\..\Source\WebCore\Modules\fetch -I..\..\Source\WebCore\Modules\geolocation -I..\..\Source\WebCore\Modules\indexeddb -I..\..\Source\WebCore\Modules\indexeddb\client -I..\..\Source\WebCore\Modules\indexeddb\server -I..\..\Source\WebCore\Modules\indexeddb\shared -I..\..\Source\WebCore\Modules\mediacontrols -I..\..\Source\WebCore\Modules\mediasession -I..\..\Source\WebCore\Modules\mediasource -I..\..\Source\WebCore\Modules\mediastream -I..\..\Source\WebCore\Modules\navigatorcontentutils -I..\..\Source\WebCore\Modules\notifications -I..\..\Source\WebCore\Modules\plugins -I..\..\Source\WebCore\Modules\proximity -I..\..\Source\WebCore\Modules\quota -I..\..\Source\WebCore\Modules\speech -I..\..\Source\WebCore\Modules\streams -I..\..\Source\WebCore\Modules\webaudio -I..\..\Source\WebCore\Modules\webdatabase -I..\..\Source\WebCore\Modules\webdriver -I..\..\Source\WebCore\Modules\websockets -I..\..\Source\WebCore\accessibility -I..\..\Source\WebCore\animation -I..\..\Source\WebCore\bindings -I..\..\Source\WebCore\bindings\js -I..\..\Source\WebCore\bridge -I..\..\Source\WebCore\bridge\c -I..\..\Source\WebCore\bridge\jsc -I..\..\Source\WebCore\contentextensions -I..\..\Source\WebCore\crypto -I..\..\Source\WebCore\crypto\algorithms -I..\..\Source\WebCore\crypto\keys -I..\..\Source\WebCore\crypto\parameters -I..\..\Source\WebCore\css -I..\..\Source\WebCore\css\parser -I..\..\Source\WebCore\cssjit -I..\..\Source\WebCore\dom -I..\..\Source\WebCore\dom\default -I..\..\Source\WebCore\domjit -I..\..\Source\WebCore\editing -I..\..\Source\WebCore\fileapi -I..\..\Source\WebCore\history -I..\..\Source\WebCore\html -I..\..\Source\WebCore\html\canvas -I..\..\Source\WebCore\html\forms -I..\..\Source\WebCore\html\parser -I..\..\Source\WebCore\html\shadow -I..\..\Source\WebCore\html\track -I..\..\Source\WebCore\inspector -I..\..\Source\WebCore\loader -I..\..\Source\WebCore\loader\appcache -I..\..\Source\WebCore\loader\archive -I..\..\Source\WebCore\loader\archive\mhtml -I..\..\Source\WebCore\loader\cache -I..\..\Source\WebCore\loader\icon -I..\..\Source\WebCore\mathml -I..\..\Source\WebCore\page -I..\..\Source\WebCore\page\animation -I..\..\Source\WebCore\page\csp -I..\..\Source\WebCore\page\scrolling -I..\..\Source\WebCore\platform -I..\..\Source\WebCore\platform\animation -I..\..\Source\WebCore\platform\audio -I..\..\Source\WebCore\platform\crypto -I..\..\Source\WebCore\platform\gamepad -I..\..\Source\WebCore\platform\gamepad\deprecated -I..\..\Source\WebCore\platform\gamepad\linux -I..\..\Source\WebCore\platform\graphics -I..\..\Source\WebCore\platform\graphics\cpu\arm -I..\..\Source\WebCore\platform\graphics\cpu\arm\filters -I..\..\Source\WebCore\platform\graphics\displaylists -I..\..\Source\WebCore\platform\graphics\filters -I..\..\Source\WebCore\platform\graphics\harfbuzz -I..\..\Source\WebCore\platform\graphics\harfbuzz\ng -I..\..\Source\WebCore\platform\graphics\opentype -I..\..\Source\WebCore\platform\graphics\transforms -I..\..\Source\WebCore\platform\mediastream -I..\..\Source\WebCore\platform\mediastream\libwebrtc -I..\..\Source\WebCore\platform\mock\mediasource -I..\..\Source\WebCore\platform\network -I..\..\Source\WebCore\platform\sql -I..\..\Source\WebCore\platform\text -I..\..\Source\WebCore\platform\text\icu -I..\..\Source\WebCore\plugins -I..\..\Source\WebCore\rendering -I..\..\Source\WebCore\rendering\line -I..\..\Source\WebCore\rendering\mathml -I..\..\Source\WebCore\rendering\shapes -I..\..\Source\WebCore\rendering\style -I..\..\Source\WebCore\rendering\svg -I..\..\Source\WebCore\replay -I..\..\Source\WebCore\storage -I..\..\Source\WebCore\style -I..\..\Source\WebCore\svg -I..\..\Source\WebCore\svg\animation -I..\..\Source\WebCore\svg\graphics -I..\..\Source\WebCore\svg\graphics\filters -I..\..\Source\WebCore\svg\properties -I..\..\Source\WebCore\websockets -I..\..\Source\WebCore\workers -I..\..\Source\WebCore\xml -I..\..\Source\WebCore\xml\parser -IDerivedSources\ForwardingHeaders\ANGLE -I..\..\Source\WebCore\platform\graphics\gpu -I..\..\Source\WebCore\ForwardingHeaders -I..\include\private -I..\include\private\JavaScriptCore -IDerivedSources\ForwardingHeaders\ANGLE\include\KHR -IDerivedSources\ForwardingHeaders\JavaScriptCore -IDerivedSources\ForwardingHeaders\JavaScriptCore\ForwardingHeaders -IDerivedSources\ForwardingHeaders\JavaScriptCore\API -IDerivedSources\ForwardingHeaders\JavaScriptCore\assembler -IDerivedSources\ForwardingHeaders\JavaScriptCore\builtins -IDerivedSources\ForwardingHeaders\JavaScriptCore\bytecode -IDerivedSources\ForwardingHeaders\JavaScriptCore\bytecompiler -IDerivedSources\ForwardingHeaders\JavaScriptCore\dfg -IDerivedSources\ForwardingHeaders\JavaScriptCore\disassembler -IDerivedSources\ForwardingHeaders\JavaScriptCore\domjit -IDerivedSources\ForwardingHeaders\JavaScriptCore\heap -IDerivedSources\ForwardingHeaders\JavaScriptCore\debugger -IDerivedSources\ForwardingHeaders\JavaScriptCore\interpreter -IDerivedSources\ForwardingHeaders\JavaScriptCore\jit -IDerivedSources\ForwardingHeaders\JavaScriptCore\llint -IDerivedSources\ForwardingHeaders\JavaScriptCore\parser -IDerivedSources\ForwardingHeaders\JavaScriptCore\profiler -IDerivedSources\ForwardingHeaders\JavaScriptCore\runtime -IDerivedSources\ForwardingHeaders\JavaScriptCore\yarr -IDerivedSources\ForwardingHeaders\WTF -I..\..\Source\WebCore\accessibility\win -I..\..\Source\WebCore\page\win -I..\..\Source\WebCore\platform\cf -I..\..\Source\WebCore\platform\cf\win -I..\..\Source\WebCore\platform\graphics\egl -I..\..\Source\WebCore\platform\graphics\opengl -I..\..\Source\WebCore\platform\graphics\win -I..\..\Source\WebCore\platform\network\win -I..\..\Source\WebCore\platform\spi\win -I..\..\Source\WebCore\platform\win -I..\..\Source\ThirdParty\ANGLE\include -I..\..\Source\ThirdParty\ANGLE\include\egl -I..\..\Source\WebCore\platform\graphics\cairo -I..\..\Source\WebCore\platform\image-decoders -I..\..\Source\WebCore\platform\image-decoders\bmp -I..\..\Source\WebCore\platform\image-decoders\gif -I..\..\Source\WebCore\platform\image-decoders\ico -I..\..\Source\WebCore\platform\image-decoders\jpeg -I..\..\Source\WebCore\platform\image-decoders\png -I..\..\Source\WebCore\platform\image-decoders\webp -I..\..\Source\WebCore\platform\graphics\texmap -I..\..\WebKitLibraries\win\include\SQLite -I..\..\WebKitLibraries\win\include\zlib -I..\..\Source\WebCore\loader\archive\cf -I..\..\Source\WebCore\platform\network\curl -I..\..\Source\JavaScriptCore -I..\..\Source\JavaScriptCore\.. -I..\..\Source\JavaScriptCore\API -I..\..\Source\JavaScriptCore\ForwardingHeaders -I..\..\Source\JavaScriptCore\assembler -I..\..\Source\JavaScriptCore\b3 -I..\..\Source\JavaScriptCore\b3\air -I..\..\Source\JavaScriptCore\bindings -I..\..\Source\JavaScriptCore\builtins -I..\..\Source\JavaScriptCore\bytecode -I..\..\Source\JavaScriptCore\bytecompiler -I..\..\Source\JavaScriptCore\dfg -I..\..\Source\JavaScriptCore\disassembler -I..\..\Source\JavaScriptCore\disassembler\udis86 -I..\..\Source\JavaScriptCore\disassembler\ARM64 -I..\..\Source\JavaScriptCore\domjit -I..\..\Source\JavaScriptCore\ftl -I..\..\Source\JavaScriptCore\heap -I..\..\Source\JavaScriptCore\debugger -I..\..\Source\JavaScriptCore\inspector -I..\..\Source\JavaScriptCore\inspector\agents -I..\..\Source\JavaScriptCore\inspector\augmentable -I..\..\Source\JavaScriptCore\inspector\remote -I..\..\Source\JavaScriptCore\interpreter -I..\..\Source\JavaScriptCore\jit -I..\..\Source\JavaScriptCore\llint -I..\..\Source\JavaScriptCore\parser -I..\..\Source\JavaScriptCore\profiler -I..\..\Source\JavaScriptCore\replay -I..\..\Source\JavaScriptCore\runtime -I..\..\Source\JavaScriptCore\tools -I..\..\Source\JavaScriptCore\wasm -I..\..\Source\JavaScriptCore\wasm\js -I..\..\Source\JavaScriptCore\yarr -IDerivedSources\JavaScriptCore -IDerivedSources\JavaScriptCore\inspector -I..\..\Source\bmalloc -I..\..\Source\WTF -I..\..\Source\ThirdParty -I..\..\Source\WebKit\Storage -I..\..\Source\WebKit\WebCoreSupport -IDerivedSources\ForwardingHeaders\WebCore -IDerivedSources\ForwardingHeaders\WebKitLegacy -I..\..\WebKitLibraries\win\include\sqlite -I..\include\private\WebCore -I..\..\Source\WebKit\win\plugins -I..\..\Source\WebKit\win\WebCoreSupport -IDerivedSources\WebKit\include -IDerivedSources\ForwardingHeaders\ANGLE\include -IDerivedSources\ForwardingHeaders\ANGLE\include\egl -IDerivedSources\ForwardingHeaders\ANGLE\include\khr -IDerivedSources\WebKit /DWIN32 /D_WINDOWS /W4 /GR- /EHs- /EHc- /MT /O2 /Ob2 /DNDEBUG /wd4018 /wd4068 /wd4099 /wd4100 /wd4127 /wd4138 /wd4146 /wd4180 /wd4189 /wd4201 /wd4206 /wd4244 /wd4251 /wd4267 /wd4275 /wd4288 /wd4291 /wd4305 /wd4309 /wd4344 /wd4355 /wd4389 /wd4396 /wd4456 /wd4457 /wd4458 /wd4459 /wd4481 /wd4503 /wd4505 /wd4510 /wd4512 /wd4530 /wd4610 /wd4611 /wd4646 /wd4702 /wd4706 /wd4722 /wd4800 /wd4819 /wd4951 /wd4952 /wd4996 /wd6011 /wd6031 /wd6211 /wd6246 /wd6255 /wd6387 /Zi /GS /EHa- /EHc- /EHs- /fp:except- /analyze- /bigobj /Gy- /openmp- /GF- /Oy- /Yu"DumpRenderTreePrefix.h" /FI"DumpRenderTreePrefix.h" /Fp"C:/WebKit-BuildSlave/win-cairo-release/build/WebKitBuild/Release/Tools/DumpRenderTree/DumpRenderTreeLib_SOURCES/DumpRenderTreePrefix.pch" /showIncludes /FoTools\DumpRenderTree\CMakeFiles\DumpRenderTreeLib.dir\win\DumpRenderTree.cpp.obj /FdTools\DumpRenderTree\CMakeFiles\DumpRenderTreeLib.dir\ /FS -c ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1469): error C3861: 'CFURLCacheCreate': identifier not found > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1470): error C3536: 'newCache': cannot be used before it is initialized > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1470): error C2228: left of '.get' must have class/struct/union > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1470): note: type is 'int' > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1470): error C3861: 'CFURLCacheSetSharedURLCache': identifier not found
Attachments
Patch (1.71 KB, patch)
2017-06-14 21:08 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2017-06-14 21:08:37 PDT
Per Arne Vollan
Comment 2 2017-06-15 00:06:09 PDT
Comment on attachment 312952 [details] Patch Thanks! R=me.
WebKit Commit Bot
Comment 3 2017-06-15 00:18:35 PDT
Comment on attachment 312952 [details] Patch Clearing flags on attachment: 312952 Committed r218320: <http://trac.webkit.org/changeset/218320>
WebKit Commit Bot
Comment 4 2017-06-15 00:18:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.