[WinCairo] DumpRenderTree.cpp: error C3861: 'CFURLCacheCreate': identifier not found https://bugs.webkit.org/show_bug.cgi?id=173399

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-06-15
Reviewed by Per Arne Vollan.

OpenCFLite doesn't have CFURLCacheCreate and CFURLCacheSetSharedURLCache.
Curl port needs to do nothing because libcurl doesn't have disk cache.

* DumpRenderTree/win/DumpRenderTree.cpp:
(prepareConsistentTestingEnvironment): Call CFURLCacheCreate() and
CFURLCacheSetSharedURLCache() only if USE(CFURLCONNECTION).

Canonical link: https://commits.webkit.org/190280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218320 268f45cc-cd09-0410-ab3c-d52691b4dbfc